<resources>
    <string name="app_name">Studify</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email_adress">Email Adress</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="go">GO</string>
    <string name="new_user_sign_up">New user? Sign up</string>
    <string name="or">OR</string>
    <string name="or1">OR</string>
    <string name="todo">TODO</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="confirm_password">confirm password</string>
    <string name="huha">TODO</string>
    <string name="confirm_password1">Confirm Password</string>
    <string name="login1">Login</string>
    <string name="new_user_sign_up1">New user? Sign up</string>
    <string name="or2">OR</string>
    <string name="facebook">Facebook</string>
    <string name="google_mail">Google Mail</string>
    <string name="twitter">Twitter</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="calendar">Calendar</string>
    <string name="study_set">Study set</string>
    <string name="pomodoro_timer">Pomodoro timer</string>
    <string name="account">Account</string>
    <string name="home_frag">Home frag</string>
    <string name="textview">TextView</string>
    <string name="hello">TODO</string>
    <string name="hello1">TODO</string>
    <string name="textview2">TextView</string>
    <string name="hello2">TODO</string>
    <string name="hello3">TextView</string>
    <string name="hello4">TODO</string>
    <string name="hello5">TextView</string>
    <string name="logout">Logout</string>
    <string name="leftarrow"><![CDATA[<-]]></string>
    <string name="july_2022">July 2022</string>
    <string name="rightarrow"><![CDATA[->]]></string>
    <string name="sun">SUN</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thur">THUR</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <string name="_1">1</string>
    <string name="new_event">New Event</string>
    <string name="title">Title:</string>
    <string name="empty">empty</string>
    <string name="event">Event:</string>
    <string name="add_event_for_calendar">Add Event for Calendar</string>
    <string name="event2">Event :</string>
    <string name="date">Date :</string>
    <string name="create_event">create event</string>
    <string name="save">Save</string>
    <string name="studify">STUDIFY</string>
    <string name="name">Name</string>
    <string name="add_task">Add Task</string>
    <string name="add_task_here">add task here</string>
    <string name="to_do_list">To DO list</string>
    <string name="to_delete_task_double_click_the_already_written_task">To DELETE task, double click the already written task</string>
    <string name="focus_timer">Focus Timer</string>
    <string name="start">Start</string>
    <string name="_00_00">00:00</string>
    <string name="reset">Reset</string>
    <string name="facebook_app_id">1234</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">56789</string>
    <string name="email_address">Email Address</string>
    <string name="email_address2">Email Address</string>
    <string name="goal">Goal</string>
    <string name="delete">DELETE</string>
    <string name="set">Set</string>
    <string name="minutes">Minutes</string>
    <string name="toddodo">TODO</string>
    <string name="hold_down_on_task_you_want_to_delete">Hold down on Task you want to delete</string>
    <string name="my_goals">My Goals</string>
    <string name="add">add</string>
    <string name="todo7">TODO</string>
    <string name="todo9">TODO</string>
    <string name="write_here">Write here</string>
    <string name="nzqa">NZQA</string>
    <string name="dashboard">Dashboard</string>
    <string name="guidance_for_level_all_year_levels">guidance for level all year levels</string>
    <string name="todo10">TODO</string>
    <string name="todo11">TODO</string>
    <string name="todo12">TODO</string>
    <string name="mrgs_online_resources">MRGS Online Resources</string>
    <string name="no_brain_too_small">No Brain Too Small</string>
    <string name="help_with_all_3_science_subjects">Help with all 3 Science Subjects</string>
    <string name="todo44">TODO</string>
    <string name="add_taskw">add task</string>
    <string name="type_here">type here</string>
    <string name="todo70">TODO</string>
    <string name="todo89">TODO</string>
    <string name="todo99">TODO</string>
    <string name="weekly">WEEKLY</string>
</resources>