<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalendarFragment"
    android:orientation="vertical"
    android:background="#FF9800">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/left_arrow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/leftarrow"
            android:textColor="#000000"
            android:textSize="20sp"
            android:background="#FF9800"/>


        <TextView
            android:id="@+id/monthYearTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textAlignment="center"
            android:text="@string/july_2022"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/black"/>

        <Button
            android:id="@+id/right_arrow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rightarrow"
            android:textColor="#000000"
            android:textSize="20sp"
            android:background="#FF9800"


            />






    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sun"
            android:textAlignment="center"
            android:textColor="#000000"
            android:background="#FF9800"
            android:textSize="16sp"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/mon"
            android:background="#FF9800"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="16sp"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tue"
            android:background="#FF9800"

            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="16sp"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/wed"
            android:textAlignment="center"
            android:textColor="#000000"
            android:background="#FF9800"
            android:textSize="16sp"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/thur"
            android:textAlignment="center"
            android:textColor="#000000"
            android:background="#FF9800"
            android:textSize="16sp"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fri"
            android:background="#FF9800"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="16sp"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sat"
            android:textAlignment="center"
            android:background="#FF9800"
            android:textColor="#000000"
            android:textSize="16sp"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/calendarRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <Button
        android:id="@+id/newevent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_event"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:background="#FF9800"
        android:layout_marginTop="-50dp"
        android:textSize="15sp"/>

    <ListView
        android:id="@+id/eventListView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"/>






</LinearLayout>