<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WeeklyCalendarFragment"
    android:orientation="vertical"
    android:background="#FFFFFF">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp">

        <ImageButton
            android:id="@+id/left_arrow"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:contentDescription="@string/todo99"
            android:src="@drawable/ic_baseline_keyboard_arrow_left_24"
            android:textColor="#000000"
            android:textSize="30sp"
            tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />


        <TextView
            android:id="@+id/monthYearTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textAlignment="center"
            android:text="@string/july_2022"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="#A57632"/>

        <ImageButton
            android:id="@+id/right_arrow"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:src="@drawable/ic_baseline_keyboard_arrow_right_24"
            android:textColor="#000000"
            android:textSize="20sp"


            tools:ignore="SpeakableTextPresentCheck"
            android:contentDescription="@string/todo89" />






    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sun"
            android:textAlignment="center"
            android:textColor="#000000"
            android:background="#FFFFFF"
            android:textSize="16sp"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/mon"
            android:background="#FFFFFF"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="16sp"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tue"
            android:background="#FFFFFF"

            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="16sp"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/wed"
            android:textAlignment="center"
            android:textColor="#000000"
            android:background="#FFFFFF"
            android:textSize="16sp"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/thur"
            android:textAlignment="center"
            android:textColor="#000000"
            android:background="#FFFFFF"
            android:textSize="16sp"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fri"
            android:background="#FFFFFF"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="16sp"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sat"
            android:textAlignment="center"
            android:background="#FFFFFF"
            android:textColor="#000000"
            android:textSize="16sp"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/calendarRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/newevent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_event"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:background="#FFD4D4"
        android:layout_marginTop="-60dp"
        android:textSize="15sp"
        />

    <ListView
        android:id="@+id/eventListView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"/>




</LinearLayout>