<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment"
    android:background="#FFFFFF">



    <!-- TODO: Update blank fragment layout -->

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:src="@drawable/headertwo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="0dp"
        android:contentDescription="@string/todo10" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/jua"
        android:text="@string/dashboard"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.547" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/guidance_for_level_all_year_levels"
        android:textColor="#795548"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <ImageView
        android:id="@+id/nzqa_tool"
        android:layout_width="171dp"
        android:layout_height="185dp"
        android:background="#FFD4D4"
        android:clickable="true"
        android:contentDescription="@string/todo11"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:src="@drawable/ic_baseline_school_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/onlineres_tool"
        app:layout_constraintHorizontal_bias="0.688"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.101"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alata"
        android:text="@string/nzqa"
        android:textColor="#795548"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/nzqa_tool"
        app:layout_constraintEnd_toEndOf="@+id/nzqa_tool"
        app:layout_constraintHorizontal_bias="0.477"
        app:layout_constraintStart_toStartOf="@+id/nzqa_tool"
        app:layout_constraintTop_toTopOf="@+id/nzqa_tool"
        app:layout_constraintVertical_bias="0.945" />

    <ImageView
        android:id="@+id/onlineres_tool"
        android:layout_width="164dp"
        android:layout_height="186dp"
        android:background="#FFD4D4"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:src="@drawable/ic_baseline_laptop_chromebook_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.874"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.101"
        android:clickable="true"
        android:contentDescription="@string/todo12" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alata"
        android:text="@string/mrgs_online_resources"
        android:textColor="#795548"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/onlineres_tool"
        app:layout_constraintEnd_toEndOf="@+id/onlineres_tool"
        app:layout_constraintHorizontal_bias="0.548"
        app:layout_constraintStart_toStartOf="@+id/onlineres_tool"
        app:layout_constraintTop_toTopOf="@+id/onlineres_tool"
        app:layout_constraintVertical_bias="0.928" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="348dp"
        android:layout_height="499dp"
        android:layout_marginTop="240dp"
        android:contentDescription="@string/todo44"
        android:src="@drawable/img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView2" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="186dp"
        android:layout_height="39dp"
        android:layout_marginTop="280dp"
        android:fontFamily="@font/alata"
        android:text="@string/no_brain_too_small"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView8"
        app:layout_constraintHorizontal_bias="0.575"
        app:layout_constraintStart_toStartOf="@+id/imageView8"
        app:layout_constraintTop_toTopOf="@+id/imageView8" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="186dp"
        android:layout_height="39dp"
        android:layout_marginTop="304dp"
        android:fontFamily="@font/alata"
        android:text="@string/help_with_all_3_science_subjects"
        android:textColor="#795548"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView8"
        app:layout_constraintHorizontal_bias="0.575"
        app:layout_constraintStart_toStartOf="@+id/imageView8"
        app:layout_constraintTop_toTopOf="@+id/imageView8" />


</androidx.constraintlayout.widget.ConstraintLayout>